# CSAW-CTF-2025-Finals-Public

./: README.md
crypto/BarnyardBlues/: BarnyardBlues_Cipher_100.docx  README.md  challenge.yaml
crypto/bb-farm/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.build  Makefile  build.rs  challenge.yml
crypto/bb-farm/guest/: Cargo.toml
crypto/bb-farm/guest/src/: lib.rs
crypto/bb-farm/release/: Dockerfile  run.sh
crypto/bb-farm/release/starter/: Cargo.toml  pyproject.toml
crypto/bb-farm/release/starter/src/: lib.rs
crypto/bb-farm/scripts/: Dockerfile.test  test.sh
crypto/bb-farm/solve/: jolt.patch  main.py  pyproject.toml
crypto/bb-farm/src/: farm.rs  main.rs  proof_allocator.rs
crypto/bb-farm/starter/: main.py
crypto/crypto_chain/: generator.py  solver.sage
crypto/hyperjump-hotfix/: README.md  challenge.yaml
crypto/hyperjump-hotfix/WU/: solve.py
crypto/hyperjump-hotfix/infra/: Dockerfile  docker-compose.yaml  gen_keys.py  initial_jump.py  navcomp.sh  pallier_jump_instr_decr.py  pallier_jump_instr_encr.py  pallier_key_reader.py  ship_ai.py  startup.sh
crypto/hyperjump-hotfix/infra/docs/: COMPLIANCE.md
crypto/hyperjump-hotfix/infra/scenario/: Pulumi.yaml  go.mod  go.sum  main.go
crypto/monty/: docker-compose.yml  dockerfile  nginx.conf  package.json  server.js
crypto/monty/public/: index.html
crypto/monty/public/js/: game.js
forensics/TheCatAteMyHomework/: README.md  challenge.yaml
forensics/legacy_auth/: auth.py  database.db
forensics/violettorch/: CanYouGuessWhatAmI.py  README.md
forensics/violettorch/solution/: README.md  decoding.py  encoding.py
misc/hehexd/: README.md  solve.md
misc/well_tempered_cipher/: README.md  generator.py  solver.py
pwn/armor-stronger/: README.md
pwn/armor-stronger/WU/: solve.py
pwn/armor-stronger/infra/: Dockerfile  chal  flag.txt  main.c
pwn/baby-yoda/: README.md
pwn/baby-yoda/WU/: solve.py
pwn/baby-yoda/infra/: Dockerfile  chal  flag.txt  ld.so.1  libc.so.6  main.c  run.sh
pwn/captains-log/: README.md
pwn/captains-log/WU/: solve.py
pwn/captains-log/infra/: Dockerfile  chal  flag.txt  ld-linux-aarch64.so.1  main.c
pwn/mrs-negative/: README.md
pwn/mrs-negative/WU/: solve.py
pwn/mrs-negative/infra/: flag.txt  main.c  run.sh
pwn/space-prison/: README.md
pwn/space-prison/WU/: solve.py
pwn/space-prison/infra/: Dockerfile  chal  flag.txt  libc.so.6  main.c
rev/capture-the-bee/: Makefile  README.md  capture_the_bee.bpf.c  capture_the_bee.c  config.sh  ksysmgt.service  secret  solve.sh
rev/capture-the-bee/obfuscated/: ctb
web/ech/: config.json  deploy_script.sh  docker-compose.yml  dockerfile  ech_dns_server.py  generate_ech_config.py  solution.py
web/heap-dump/: README.md  solve.txt
web/heap-dump/heap-dump/: Dockerfile  build.gradle  build.sh  compose.yml  settings.gradle
web/heap-dump/heap-dump/rootfs/: init-users.sql  post-migration.sh  postgres-init  secretinit.sh  setup.sh
web/hr-portal/src/: CTF Challenge Write-Up.docx  Dockerfile  app.py  flag.txt  reports.py  run_chall.sh
web/malicious-cors/cors-csp/: Dockerfile
web/malicious-cors/solution/: solve.sh
web/mars-project-gallery/: README.md  index.html  main.js  main.py  main.tf  style.css
web/orbital-uplink/: README.md  challenge.yaml
web/orbital-uplink/WU/: solution.md
web/orbital-uplink/infra/: Dockerfile  app.py  docker-compose.yml  flag.txt  requirements.txt  start.sh
web/spring-break/: solve.txt
web/spring-break/gs-accessing-data-rest/: .gitignore  Dockerfile  README.md  build.gradle  flag.txt  pom.xml
(+42 files in other folders)
