[package]
name = "bb-farm"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["guest"]
exclude = ["starter"]

[dependencies]
anyhow = "1"
base64 = "0.22"
hex = "0.4"
libc = "0.2"
postcard = { version = "1.1", features = ["use-std"] }
clap = { version = "4", features = ["derive"], optional = true }
once_cell = "1"
thiserror = "1"
tempfile = "3"
jolt-sdk = { git = "https://github.com/a16z/jolt", package = "jolt-sdk", features = ["host"], rev = "710e678bfa3bcdd3f3a229485308ac7a3841f5ee" }
derive_more = "0.99"
guest = { path = "guest" }

[build-dependencies]
anyhow = "1"
tempfile = "3"
guest = { path = "guest" }
jolt-sdk = { git = "https://github.com/a16z/jolt", package = "jolt-sdk", features = ["host"], rev = "710e678bfa3bcdd3f3a229485308ac7a3841f5ee" }

[features]
default = []
cli = ["dep:clap"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-grumpkin = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
dory = { git = "https://github.com/markosg04/dory", branch = "dev/twist-shout" }
